# LF

./: .gitignore  .vimrc  CMakeLists.txt  DOCKER.md  Dockerfile  README.md  dummy_visualisations.R  endgame_scenarios.txt  run.sh  runIU.csv  setup.sh  vis_functions.R
run/: setup.py  (+9 more)
src/: .gitignore  BedNetEvent.cpp  BedNetEvent.d  BedNetEvent.hpp  CMakeLists.txt  Host.cpp  Host.hpp  ImportationRateEvent.cpp  ImportationRateEvent.hpp  MDAEvent.cpp  MDAEvent.d  MDAEvent.hpp  MDAtableIU.csv  Makefile  Model.cpp  Model.hpp  Output.cpp  Output.hpp  Population.cpp  Population.hpp  PrevalenceEvent.cpp  PrevalenceEvent.hpp  README.md  RecordedPrevalence.cpp  RecordedPrevalence.hpp  Scenario.cpp  Scenario.hpp  ScenariosList.cpp  ScenariosList.d  ScenariosList.hpp  Statistics.cpp  Statistics.d  Statistics.hpp  Vector.cpp  Vector.hpp  Worm.cpp  Worm.d  Worm.hpp  compile_transfil.sh  main.cpp  (+2 more)
src/SyscompAnalysis/IHME_scen0/0_NGA37100/: IHME_scen0_NGA37100_rep_10.csv  IHME_scen0_NGA37100_rep_2.csv  IHME_scen0_NGA37100_rep_3.csv  IHME_scen0_NGA37100_rep_4.csv  IHME_scen0_NGA37100_rep_5.csv  IHME_scen0_NGA37100_rep_6.csv  IHME_scen0_NGA37100_rep_7.csv  IHME_scen0_NGA37100_rep_8.csv  IHME_scen0_NGA37100_rep_9.csv  PreTAS_scen0_NGA37100_rep_10.csv  PreTAS_scen0_NGA37100_rep_2.csv  PreTAS_scen0_NGA37100_rep_3.csv  PreTAS_scen0_NGA37100_rep_4.csv  PreTAS_scen0_NGA37100_rep_5.csv  PreTAS_scen0_NGA37100_rep_6.csv  PreTAS_scen0_NGA37100_rep_7.csv  PreTAS_scen0_NGA37100_rep_8.csv  PreTAS_scen0_NGA37100_rep_9.csv  TAS_scen0_NGA37100_rep_10.csv  TAS_scen0_NGA37100_rep_2.csv  TAS_scen0_NGA37100_rep_3.csv  TAS_scen0_NGA37100_rep_4.csv  TAS_scen0_NGA37100_rep_5.csv  TAS_scen0_NGA37100_rep_6.csv  TAS_scen0_NGA37100_rep_7.csv  TAS_scen0_NGA37100_rep_8.csv  TAS_scen0_NGA37100_rep_9.csv
src/SyscompAnalysis/IHME_scen1/1_NGA37100/: IHME_scen1_NGA37100_rep_10.csv  IHME_scen1_NGA37100_rep_2.csv  IHME_scen1_NGA37100_rep_3.csv  IHME_scen1_NGA37100_rep_4.csv  IHME_scen1_NGA37100_rep_5.csv  IHME_scen1_NGA37100_rep_6.csv  IHME_scen1_NGA37100_rep_7.csv  IHME_scen1_NGA37100_rep_8.csv  IHME_scen1_NGA37100_rep_9.csv  PreTAS_scen1_NGA37100_rep_10.csv  PreTAS_scen1_NGA37100_rep_2.csv  PreTAS_scen1_NGA37100_rep_3.csv  PreTAS_scen1_NGA37100_rep_4.csv  PreTAS_scen1_NGA37100_rep_5.csv  PreTAS_scen1_NGA37100_rep_6.csv  PreTAS_scen1_NGA37100_rep_7.csv  PreTAS_scen1_NGA37100_rep_8.csv  PreTAS_scen1_NGA37100_rep_9.csv  TAS_scen1_NGA37100_rep_10.csv  TAS_scen1_NGA37100_rep_2.csv  TAS_scen1_NGA37100_rep_3.csv  TAS_scen1_NGA37100_rep_4.csv  TAS_scen1_NGA37100_rep_5.csv  TAS_scen1_NGA37100_rep_6.csv  TAS_scen1_NGA37100_rep_7.csv  TAS_scen1_NGA37100_rep_8.csv  TAS_scen1_NGA37100_rep_9.csv
src/SyscompAnalysis/IHME_scen10/10_NGA37100/: IHME_scen10_NGA37100_rep_1.csv  IHME_scen10_NGA37100_rep_2.csv  IHME_scen10_NGA37100_rep_3.csv  IHME_scen10_NGA37100_rep_4.csv  IHME_scen10_NGA37100_rep_5.csv  IHME_scen10_NGA37100_rep_6.csv  IHME_scen10_NGA37100_rep_7.csv  IHME_scen10_NGA37100_rep_8.csv  IHME_scen10_NGA37100_rep_9.csv  PreTAS_scen10_NGA37100_rep_1.csv  PreTAS_scen10_NGA37100_rep_2.csv  PreTAS_scen10_NGA37100_rep_3.csv  PreTAS_scen10_NGA37100_rep_4.csv  PreTAS_scen10_NGA37100_rep_5.csv  PreTAS_scen10_NGA37100_rep_6.csv  PreTAS_scen10_NGA37100_rep_7.csv  PreTAS_scen10_NGA37100_rep_8.csv  PreTAS_scen10_NGA37100_rep_9.csv  TAS_scen10_NGA37100_rep_1.csv  TAS_scen10_NGA37100_rep_2.csv  TAS_scen10_NGA37100_rep_3.csv  TAS_scen10_NGA37100_rep_4.csv  TAS_scen10_NGA37100_rep_5.csv  TAS_scen10_NGA37100_rep_6.csv  (+3 more)
src/tinyxml/: CMakeLists.txt  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
tests/: CMakeLists.txt  test_host.cpp  test_main.cpp  test_model.cpp
(+587 files in other folders)
